--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,41 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+    --color-primary-100: 0deg 0% 63%;
+    --color-primary-200: 0deg 0% 0%;
+    --color-primary-300: 0deg 0% 100%;
+    --color-primary-400: 0deg 0% 27%;
+  }
+
+  body {
+    @apply bg-primary-300 font-sans text-base font-medium tracking-body text-primary-100;
+  }
+  h1 {
+    @apply text-heading-mobile text-primary-200 lg:text-heading-desktop;
+  }
+  h2 {
+    @apply font-bold tracking-subheading-mobile text-primary-200 lg:tracking-subheading-desktop;
+  }
+  nav {
+    @apply font-semibold leading-nav tracking-nav text-primary-200;
+  }
+}
+
+@layer utilities {
+  .navLink {
+    @apply relative;
+  }
+  .navLink::after {
+    @apply absolute left-0 -bottom-[8px] h-[2px] w-[0%]  bg-primary-200 duration-300 content-[''];
+  }
+  .navLink:hover::after {
+    @apply w-full;
+  }
+
+  .slider {
+    @apply w-14 bg-primary-200 px-button-mobile-x py-button-mobile-y lg:w-20 lg:px-button-desktop-x lg:py-7;
+  }
+}
